feat: add auth and logger to grpc
